--- a/Backend/.env
+++ b/Backend/.env
@@ -1,2 +1,3 @@
 PORT=4000
 MONGO_URL=mongodb+srv://janod:mernapp123@mernapp.7coch69.mongodb.net/?retryWrites=true&w=majority
+SECRET=shesellsseashellsontheseashore
